force-app/main/default/objects/SCOC__PublicRecordsList__c/SCOC__PublicRecordsList__c.object-meta.xml
<CustomObject>
    <description>Response Entity Public Records List</description>
    <label>Public Record</label>
    <nameField>
        <displayFormat>PRL-{00000}</displayFormat>
        <label>Public Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Public Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>