force-app/main/default/objects/SCOC__PublicRecordsList__c/fields/SCOC__Amount__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Amount__c</fullName>
    <description>Public record amount</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>