force-app/main/default/objects/SCOC__PublicRecordsList__c/fields/SCOC__BKLiabilitiesAmount__c.field-meta.xml
<CustomField>
    <fullName>SCOC__BKLiabilitiesAmount__c</fullName>
    <description>Public record bankruptcy liabilities amount.</description>
    <label>Bankruptcy Liabilities Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>