force-app/main/default/objects/SCOC__PublicRecordsList__c/fields/SCOC__BKRepaymentPercent__c.field-meta.xml
<CustomField>
    <fullName>SCOC__BKRepaymentPercent__c</fullName>
    <description>Public record bankruptcy repayment percent.</description>
    <label>Bankruptcy Repayment Percent</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>