force-app/main/default/objects/SCOC__PublicRecordsList__c/fields/SCOC__Comment__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Comment__c</fullName>
    <description>Public record comment</description>
    <label>Comment</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>