force-app/main/default/objects/SCOC__PublicRecordsList__c/fields/SCOC__CourtCode__c.field-meta.xml
<CustomField>
    <fullName>SCOC__CourtCode__c</fullName>
    <description>Public record court code</description>
    <label>Court Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>