force-app/main/default/objects/SCOC__PublicRecordsList__c/fields/SCOC__Date_Paid__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Date_Paid__c</fullName>
    <description>The system automatically populates this optional date field to provide the date that the liability was paid as indicated in the integration response. There is no default. If not included in the response the field remains blank.</description>
    <inlineHelpText>This system-populated field displays the date that the liability was paid as indicated in the integration response.</inlineHelpText>
    <label>Date Paid</label>
    <type>Date</type>
</CustomField>