force-app/main/default/objects/SCOC__PublicRecordsList__c/fields/SCOC__DateFiled__c.field-meta.xml
<CustomField>
    <fullName>SCOC__DateFiled__c</fullName>
    <description>Date that public record was filed</description>
    <label>Date Filed</label>
    <type>Date</type>
</CustomField>