force-app/main/default/objects/SCOC__PublicRecordsList__c/fields/SCOC__DateReported__c.field-meta.xml
<CustomField>
    <fullName>SCOC__DateReported__c</fullName>
    <description>Date that public record was reported</description>
    <label>Date Reported</label>
    <type>Date</type>
</CustomField>