force-app/main/default/objects/SCOC__PublicRecordsList__c/fields/SCOC__Description__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Description__c</fullName>
    <description>Public record description.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>