force-app/main/default/objects/SCOC__PublicRecordsList__c/fields/SCOC__Designator__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Designator__c</fullName>
    <description>Public record designator.</description>
    <label>Designator</label>
    <length>40</length>
    <type>Text</type>
</CustomField>