force-app/main/default/objects/SCOC__PublicRecordsList__c/fields/SCOC__NarrativeCode__c.field-meta.xml
<CustomField>
    <fullName>SCOC__NarrativeCode__c</fullName>
    <description>Narrative Code</description>
    <label>Narrative Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>