force-app/main/default/objects/SCOC__PublicRecordsList__c/fields/SCOC__NarrativeCodeText__c.field-meta.xml
<CustomField>
    <fullName>SCOC__NarrativeCodeText__c</fullName>
    <description>Narrative Code Text</description>
    <label>Narrative Code Text</label>
    <length>120</length>
    <type>Text</type>
</CustomField>