force-app/main/default/objects/SCOC__PublicRecordsList__c/fields/SCOC__PriorCaseNumber__c.field-meta.xml
<CustomField>
    <fullName>SCOC__PriorCaseNumber__c</fullName>
    <description>Prior Case Number</description>
    <label>Prior Case Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>