force-app/main/default/objects/SCOC__PublicRecordsList__c/fields/SCOC__Source__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Source__c</fullName>
    <description>Public record source</description>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>