force-app/main/default/objects/SCOC__PublicRecordsList__c/fields/SCOC__StatusCode__c.field-meta.xml
<CustomField>
    <fullName>SCOC__StatusCode__c</fullName>
    <description>Status Code</description>
    <label>Status Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>