force-app/main/default/objects/SCOC__PublicRecordsList__c/fields/SCOC__Type__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Type__c</fullName>
    <description>Public record type</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bankruptcies</fullName>
            </value>
            <value>
                <fullName>Judgements</fullName>
            </value>
            <value>
                <fullName>Liens</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>