force-app/main/default/objects/SCOC__PublicRecordsList__c/fields/SCOC__VendorType__c.field-meta.xml
<CustomField>
    <fullName>SCOC__VendorType__c</fullName>
    <description>Vendor specific public record type</description>
    <label>Vendor Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>